lustre/include/obd_support.h
@@ -289,6 +289,7 @@ extern char obd_jobid_var[];
 #define OBD_FAIL_OSD_REF_DEL				0x19c
 #define OBD_FAIL_OSD_OI_ENOSPC				0x19d
 #define OBD_FAIL_OSD_DOTDOT_ENOSPC			0x19e
+#define OBD_FAIL_OSD_SCRUB_STALE			0x19f
 
 #define OBD_FAIL_OFD_SET_OID				0x1e0
 
